--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta lang="id" charset="utf-8">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
   <title>@Denzetye | Website Builder For You!</title>
 </head>
 <html>
